# screw_detection

./: CMakeLists.txt  README.md  default.xml  local_default.xml  local_stuttgart.xml  stuttgart.xml
include/: ScrewMatcher.h  screw_matching.h  utility.h
src/: ScrewMatcher.cpp  main.cpp  screw_matching.cpp  utility.cpp
